--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <!-- second child item -->
         <ul>
             <li><a href="https://philipburtenshawwebdesign.github.io/">Home</a></li>
-            <li><a href="https://philipburtenshawwebdesign.github.io/portfolio/index">Portfolio</a></li>
-            <li><a href="https://philipburtenshawwebdesign.github.io/contact/index" class="btn-cta">Contact &nbsp;<i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="https://philipburtenshawwebdesign.github.io/portfolio/index.html">Portfolio</a></li>
+            <li><a href="https://philipburtenshawwebdesign.github.io/contact/index.html" class="btn-cta">Contact &nbsp;<i class="fas fa-arrow-right"></i></a></li>
         </ul>
     </div>
     <!-- End desktop menu -->
@@ -66,8 +66,8 @@
     <div class="flyout-menu flyout-menu-is-closed menu-light">
         <ul>
             <li><a href="https://philipburtenshawwebdesign.github.io/">Home</a></li>
-            <li><a href="https://philipburtenshawwebdesign.github.io/portfolio/index">Portfolio</a></li>
-            <li><a href="https://philipburtenshawwebdesign.github.io/contact/index" class="btn-cta">Contact &nbsp;<i class="fas fa-arrow-right"></i></a></li>
+            <li><a href="https://philipburtenshawwebdesign.github.io/portfolio/index.html">Portfolio</a></li>
+            <li><a href="https://philipburtenshawwebdesign.github.io/contact/index.html" class="btn-cta">Contact &nbsp;<i class="fas fa-arrow-right"></i></a></li>
         </ul>
 
         <hr>
@@ -113,9 +113,9 @@
 	<div class="container-flexbox bg-pastel-green">
 		<div class="item-1">
 			<h2>Recent projects</h2>
-            <p>Below you can see some examples of my recent work. Check out my complete <a href="https://philipburtenshawwebdesign.github.io/portfolio/index" class="fancy-link">portfolio</a>.</p>
+            <p>Below you can see some examples of my recent work. Check out my complete <a href="https://philipburtenshawwebdesign.github.io/portfolio/index.html" class="fancy-link">portfolio</a>.</p>
             
-            <p>Have a project you'd like to discuss? <a href="https://philipburtenshawwebdesign.github.io/contact/index" class="fancy-link">Let's make something great together!</a></p>
+            <p>Have a project you'd like to discuss? <a href="https://philipburtenshawwebdesign.github.io/contact/index.html" class="fancy-link">Let's make something great together!</a></p>
 		</div>
     </div><!-- End parent flexbox container -->
     
